# graph-invariant

./: .gitignore  README.md  Setup.hs  brittany.yaml  graph-isomorphism.cabal  stack.yaml
docs/: contributing.md
exe/: Main.hs
src/: Main.hs
src/Data/Graph/Dimacs/: Parse.hs
src/Data/Graph/Invariant/: Algebra.hs  Equivalence.hs  EquivalenceSet.hs  Gap.hs  Matrix.hs  Output.hs  Perfect.hs  Permutation.hs  RunStats.hs  Types.hs  Util.hs
