cabal-version:       >=1.12
name:                graph-isomorphism
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ppetr/graph-isomorphism#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Petr
maintainer:          https://github.com/ppetr/
copyright:           Copyright 2022-2023 Google LLC
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     Data.Graph.Dimacs.Parse,
                       Data.Graph.Invariant.Algebra,
                       Data.Graph.Invariant.Equivalence,
                       Data.Graph.Invariant.Matrix,
                       Data.Graph.Invariant.Output,
                       Data.Graph.Invariant.Perfect,
                       Data.Graph.Invariant.RunStats,
                       Data.Graph.Invariant.Types,
                       Data.Graph.Invariant.Util
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       aeson,
                       array,
                       attoparsec,
                       bytestring,
                       containers,
                       hashable,
                       hashtables,
                       hmatrix >= 0.17,
                       logict,
                       monad-st,
                       mtl,
                       mwc-random,
                       text,
                       transformers,
                       unix,
                       vector,
                       vector-algorithms,
                       writer-cps-mtl
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fllvm
                       -O2

executable graph-isomorphism
  hs-source-dirs:      exe
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       aeson-pretty,
                       atomic-write,
                       bytestring,
                       graph-isomorphism,
                       attoparsec,
                       text,
                       vector
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fllvm
                       -O2
                       -with-rtsopts=-N -with-rtsopts=-M1G -rtsopts
